--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-<script language="text/javascript">
-    
+<div id="maze"></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.0/jquery.js" type="text/javascript"></script>
+<script type="text/javascript">
+    $(document).ready(function(){
+       function generateMaze(width, height){
+           var maze = $('#maze');
+           maze.css('width', width*100);
+           maze.css('height', height*100);
+           var x = 0;
+           var y = 0
+           for(var i = 0; i < width*height; i++){
+               $('<div class="cell" data-x="'+x+'" data-y="'+y+'"></div>').appendTo(maze);
+               x++;
+               if(x == 5){
+                   y++;
+                   x = 0;
+               }
+           }
+       }
+
+        generateMaze(5,5);
+    });
 </script>
 </body>
 </html>
