--- a/index.html
+++ b/index.html
@@ -5,28 +5,81 @@
     <title>Title</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
-<body>
+<body id="mazeContainer">
 <div id="maze"></div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.0/jquery.js" type="text/javascript"></script>
+<script src="jquery-2.2.4.min.js" type="text/javascript"></script>
 <script type="text/javascript">
     $(document).ready(function(){
-       function generateMaze(width, height){
-           var maze = $('#maze');
-           maze.css('width', width*100);
-           maze.css('height', height*100);
-           var x = 0;
-           var y = 0
-           for(var i = 0; i < width*height; i++){
-               $('<div class="cell" data-x="'+x+'" data-y="'+y+'"></div>').appendTo(maze);
-               x++;
-               if(x == 5){
-                   y++;
-                   x = 0;
-               }
-           }
-       }
+
+        var maze = $('#maze');
+        var cells;
+        var direction = [-5,1,5,-1];
+        var width = 0;
+        var height = 0;
+        var currentCell;
+        var nextCell;
+
+        function generateMaze(wth, hgt){
+
+            width = wth;
+            height = hgt;
+
+            maze.css('width', width*100);
+            maze.css('height', height*100);
+
+            var x = 0;
+            var y = 0;
+
+            for(var i = 0; i < width*height; i++){
+                $('<div class="cells" data-x="'+x+'" data-y="'+y+'" data-value="'+i+'">'+i+'</div>').appendTo(maze);
+                x++;
+                if(x == 5){
+                    y++;
+                    x = 0;
+                }
+            }
+
+            cells = $('.cells');
+        }
+
+        function selectCell(){
+            var wrongDirection = true;
+
+            var randomPosition = parseInt(getRandomArbitrary(0, cells.length));
+            currentCell = cells[randomPosition];
+
+            var currentDirection = direction[parseInt(getRandomArbitrary(0, 4))];
+
+            while(wrongDirection) {
+                if ((randomPosition < 5 && currentDirection == -5)
+                        || (randomPosition > width * height - width && currentDirection == 5)
+                        || (randomPosition == width*height - 1 && currentDirection == 1)
+                        || (randomPosition == 0 && currentDirection == -1)){
+                    wrongDirection = true;
+                    currentDirection = direction[parseInt(getRandomArbitrary(0, 4))];
+                }else{
+                    wrongDirection = false;
+                }
+            }
+
+            nextCell = cells[randomPosition + currentDirection];
+
+        }
+
+        function fusionCell(){
+            if($(currentCell).attr('data-value') != $(nextCell).attr('data-value')){
+                $(nextCell).attr('data-value', $(currentCell).attr('data-value'));
+                $(nextCell).html($(currentCell).attr('data-value'));
+            }
+        }
 
         generateMaze(5,5);
+        selectCell();
+        fusionCell();
+
+        function getRandomArbitrary(min, max) {
+            return Math.random() * (max - min) + min;
+        }
     });
 </script>
 </body>
